<resources>
    <string name="app_name" translatable="false">KalkulatorStrbad</string>
    <string name="amount">Amount</string>
    <string name="convert">Convert</string>
    <string name="currency">Currency</string>
    <string name="right_arrow">Right arrow</string>
    <string name="conversion_display">%1$.5f %2$s is equal to %3$.5f %4$s</string>
    <string name="enter_amount">Currency amount is empty. Enter a value.</string>
    <string name="convert_from">Convert From</string>
    <string name="convert_to">Convert To</string>
    <string name="theme">Theme</string>

    <string-array name="app_themes">
        <item>Default</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
</resources>